@@ -13,6 +13,7 @@ This Work includes contributions authored by David E. Jones, not as a
 <screen xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="http://moqui.org/xsd/xml-screen-1.0.xsd"
         default-menu-title="Tests" default-menu-index="9" require-authentication="false">
+    <macro-template type="html" location="template/screen-macro/TestScreenHtmlMacros.ftl"/>
 
     <transition name=".*">
         <actions><script>ec.message.addMessage("Transition name was [${sri.getCurrentScreenUrl().targetTransitionActualName}]")</script></actions>
